[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Gold Box 8x8.ttf" type="DynamicFontData" id=2]


[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 200
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -326.0
margin_bottom = -272.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "PIRATE GREED"
align = 1
valign = 1

[node name="MarginContainerScore" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="ScoreLabel" type="Label" parent="MarginContainerScore"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Best 0"
valign = 1

[node name="MarginContainerTime" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_bottom = -16.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="TimeLabel" type="Label" parent="MarginContainerTime"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "~0~"
align = 1
valign = 1

[node name="StartContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -110.0
margin_bottom = -25.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="StartLabel" type="Label" parent="StartContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "SPACE
TO START"
align = 1
valign = 1
autowrap = true

[node name="Score" type="Label" parent="."]
visible = false
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -180.0
margin_right = 455.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 0.0941176 )
text = "0"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BestScoreTextContainer" type="MarginContainer" parent="."]
editor/display_folded = true
margin_left = 80.0
margin_top = 34.0
margin_right = 404.0
margin_bottom = 344.0

[node name="Label" type="Label" parent="BestScoreTextContainer"]
margin_top = 139.0
margin_right = 324.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "BEST SCORE"
align = 1

[node name="BestScoreContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -100.0
margin_bottom = 100.0

[node name="BestScore" type="Label" parent="BestScoreContainer"]
margin_right = 480.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "0"
align = 1
valign = 1
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
